Fix alignment of title in @media

--- a/style.css
+++ b/style.css
@@ -92,7 +92,8 @@ body {
   .title {
     width: 80%;
     font-size: 8vw;
-    margin-bottom: 0;
+    text-align: center;
+    margin: auto;
   }
 
   .left-column {
